Fix spacing and responsiveness issues #16

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -56,7 +56,7 @@ h2 {
   line-height: 30px;
   margin-bottom: 0;
   margin-top: 0;
-  padding-bottom: 19px;
+  padding-bottom: 10px;
 }
 
 h3 {
@@ -67,18 +67,11 @@ h3 {
   line-height: 40px;
   margin-bottom: 0;
   margin-top: 0;
-  padding-bottom: 19px;
 }
 
 h5 {
   color: $colorBlack;
   font-family: $fontIMFellDWPica;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 40px;
-  margin-bottom: 0;
-  margin-top: 0;
-  padding-bottom: 19px;
 }
 
 p {
@@ -168,7 +161,7 @@ section {
 }
 
 .first-section {
-  margin-top: 200px;
+  margin-top: 160px;
   box-shadow: 0px 0px 12px 2px $colorFogGray;
 }
 
@@ -197,7 +190,7 @@ section {
 ////////////////////////////////////////////////////////////
 #portfolio-selector {
   font-family: $fontPodkova;
-  margin-top: 20px;
+  margin: 20px;
 
   .btn {
     padding-left: 30px;
@@ -210,6 +203,7 @@ section {
   display: inline-block;
   height: 260px;
   margin: 20px;
+  margin-top: 0px;
   padding: 20px;
   width: 300px;
 
@@ -585,6 +579,15 @@ section {
 
   .headline {
     margin-top: 50px;
+  }
+
+  #portfolio-selector {
+    margin-top: 0px;
+
+    .btn {
+      padding-left: 20px;
+      padding-right: 20px;
+    }
   }
 }
 
